--- a/react_course_fh/05-hook-app/package.json
+++ b/react_course_fh/05-hook-app/package.json
@@ -13,8 +13,12 @@
     "format": "npm run format-ts && npm run format-tsx"
   },
   "dependencies": {
+    "localforage": "^1.10.0",
+    "match-sorter": "^6.3.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.21.0",
+    "sort-by": "^1.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.23.5",
