Adds testing config and running prettier

--- a/react_course_fh/05-hook-app/package.json
+++ b/react_course_fh/05-hook-app/package.json
@@ -10,7 +10,8 @@
     "preview": "vite preview",
     "format-ts": "prettier --write \"src/**/*.ts\"",
     "format-tsx": "prettier --write \"src/**/*.tsx\"",
-    "format": "npm run format-ts && npm run format-tsx"
+    "format": "npm run format-ts && npm run format-tsx",
+    "test": "jest --watchAll"
   },
   "dependencies": {
     "localforage": "^1.10.0",
