--- a/react_course_fh/05-hook-app/package.json
+++ b/react_course_fh/05-hook-app/package.json
@@ -27,6 +27,7 @@
     "@babel/preset-react": "^7.23.3",
     "@babel/preset-typescript": "^7.23.3",
     "@testing-library/react": "^14.1.2",
+    "@testing-library/user-event": "^14.5.1",
     "@types/jest": "^29.5.11",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.17",
@@ -41,6 +42,7 @@
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "node-fetch": "^2.6.5",
+    "prettier": "3.1.1",
     "ts-jest": "^29.1.1",
     "typescript": "^5.3.2",
     "vite": "^5.0.0",
