Section 16 : SPA Test cases

--- a/react_course_fh/07-characters-spa/tsconfig.json
+++ b/react_course_fh/07-characters-spa/tsconfig.json
@@ -22,7 +22,7 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
-    "types": ["jest", "node", "@types/jest"]
+    "types": ["jest", "node", "@types/jest", "@testing-library/react"]
   },
   "include": [
     "src",
